Add Pilot Stubber
* All: Added the pilot stubber that generates indirection stubs against designated methods. It is pilot program, so I left enough room for manual customization(it probably sacrifice the performance).
* All: In README.md, update the steps of how to use.
* Framework: Added the namespace 'Configuration' that contains the classes to read stub settings.

--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,11 @@
 *.dasm
 *.unsuccessfulbuild
 TemporaryGeneratedFile*
+*.g.cs
+*.g.csproj
+Debug/
+Debug(.NET 3.5)/
+Debug(.NET 4)/
+Release/
+Release(.NET 3.5)/
+Release(.NET 4)/
