--- a/Urasandesu.Prig.Framework/PilotStubber.prig.template
+++ b/Urasandesu.Prig.Framework/PilotStubber.prig.template
@@ -2,7 +2,7 @@
 <configuration>
   
   <configSections>
-    <section name="prig" type="Urasandesu.Prig.Framework.Configuration.PrigSection, Urasandesu.Prig.Framework" />
+    <section name="prig" type="Urasandesu.Prig.Framework.PilotStubberConfiguration.PrigSection, Urasandesu.Prig.Framework" />
   </configSections>
 
   <!-- 
