--- a/program1/app.config
+++ b/program1/app.config
@@ -1,3 +1,9 @@
 <?xml version="1.0"?>
 <configuration>
-<startup><supportedRuntime version="v2.0.50727" sku="Client"/></startup></configuration>
+  <appSettings>
+    <add key="Holiday" value="Sunday" />
+  </appSettings>
+  <startup>
+    <supportedRuntime version="v2.0.50727" sku="Client"/>
+  </startup>
+</configuration>
