--- a/Test.program1/Test.program1.csproj
+++ b/Test.program1/Test.program1.csproj
@@ -156,6 +156,7 @@
     <Compile Include="System\Prig\PDateTimeTest.cs" />
     <Compile Include="System\Text\Prig\PStringBuilderTest.cs" />
     <Compile Include="System\Threading\Prig\PInterlockedTest.cs" />
+    <Compile Include="UntestableLibrary\Prig\PULGMTMasterTest.cs" />
     <Compile Include="UntestableLibrary\Prig\PULSharedMemoryTest.cs" />
     <Compile Include="UntestableLibrary\Prig\PULWebClientTest.cs" />
     <Compile Include="UntestableLibrary\Prig\PULIntPtrTest.cs" />
