--- a/UntestableLibrary/UntestableLibrary.csproj
+++ b/UntestableLibrary/UntestableLibrary.csproj
@@ -68,6 +68,7 @@
     <Compile Include="ULConfigurationManager.cs" />
     <Compile Include="ULDictionary.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ULGMTMaster.cs" />
     <Compile Include="ULIdnMapping.cs" />
     <Compile Include="ULSharedMemory.cs" />
     <Compile Include="ULWebClient.cs" />
