--- a/Test.program1/Test.program1.csproj
+++ b/Test.program1/Test.program1.csproj
@@ -146,6 +146,7 @@
     <Compile Include="MyLibraryTest\VillageTest.cs" />
     <Compile Include="MyLibraryTest\LifeInfoTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="System\Collections\Generic\Prig\PListTest.cs" />
     <Compile Include="System\Globalization\Prig\PJapaneseLunisolarCalendarTest.cs" />
     <Compile Include="System\Globalization\Prig\PPersianCalendarTest.cs" />
     <Compile Include="System\IO\Prig\PMemoryStreamTest.cs" />
@@ -183,7 +184,9 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <None Include="mscorlib.prig" />
+    <None Include="mscorlib.prig">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="Test.program1.snk" />
     <None Include="UntestableLibrary.prig">
       <SubType>Designer</SubType>
