Refactoring, Bug Fix and Rebuild All Stubs
* NuGet: Improve the error handling to hide unneeded error messages for developer under normal conditions. In addition, did refactoring - organized some function names, enhanced the type check for the arguments of some functions.
* NuGet: Fixed #16: Nested Type can't be resolved in its indirection stub. => Naming convention was insufficiency. Also it was problem that full name wasn't specified as described by Issue's comment, but it was real problem that the name of a nested type wasn't generated correctly.
* NuGet: Fixed #17: Prig can't uninstall correctly against the solution that contains multiple test projects. => It wasn't implemented. Added the check whether the test projects that are installed Prig are around one to Install.ps1/Uninstall.ps1.
* All: Re-generated all indirection stubs, because the stub content is changed to correct the issues #16, #17.

--- a/Nuspec/Prig.nuspec
+++ b/Nuspec/Prig.nuspec
@@ -2,7 +2,7 @@
 <package >
   <metadata>
     <id>Prig</id>
-    <version>0.0.0-alpha8</version>
+    <version>0.0.0-alpha9</version>
     <title>Prig: Open Source Alternative to Microsoft Fakes</title>
     <authors>Akira Sugiura</authors>
     <owners>Akira Sugiura</owners>
@@ -17,7 +17,13 @@
     </description>
     <copyright>(c) 2014 Akira Sugiura. All rights reserved.</copyright>
     <tags>tdd isolation mock mocks mocking fake fakes faking unittest unittesting</tags>
-    <releaseNotes>Version 0.0.0-alpha8
+    <releaseNotes>Version 0.0.0-alpha9
+* Pre-release 9.
+* Fixed #16: Nested Type can't be resolved in its indirection stub.
+* Fixed #17: Prig can't uninstall correctly against the solution that contains multiple test projects.
+
+
+Version 0.0.0-alpha8
 * Pre-release 8.
 * Supported the feature to set default behavior.
 * Modifying stub settings became a bit easier. The PowerShell command `Get-IndirectionStubSetting` supports generating unique name at the same time.
