Bug Fix, Usability Improvement and Fix Build Error
* NuGet: Fixed #18: `Get-IndirectionStubSetting` generates invalid alias against explict implemented interface. => Applied special naming convention. It is namespace + indirection stub name for the interface + indirection stub name for the method, because it doesn't become unique if using only the method name.
* NuGet: Fixed #19: `Find-IndirectionTarget` should filter the members that can't call indirectly by default. => Made the command to become so.
* All: Tried to upgrade the version of Boost from 1.55.0 to 1.56.0, but couldn't. Because the behavior of the new version was widely different compared with the previous version. See also [#10360 (Since 1.56, any_range use static cast of reference instead of implicit conversion) – Boost C++ Libraries](https://svn.boost.org/trac/boost/ticket/10360), [#10493 (Since 1.56, any_range with non-reference references can cause UB) – Boost C++ Libraries](https://svn.boost.org/trac/boost/ticket/10493). I corrected only build errors I noticed at the time.

--- a/Nuspec/Prig.nuspec
+++ b/Nuspec/Prig.nuspec
@@ -21,6 +21,8 @@
 * Pre-release 9.
 * Fixed #16: Nested Type can't be resolved in its indirection stub.
 * Fixed #17: Prig can't uninstall correctly against the solution that contains multiple test projects.
+* Fixed #18: `Get-IndirectionStubSetting` generates invalid alias against explict implemented interface.
+* Fixed #19: `Find-IndirectionTarget` should filter the members that can't call indirectly by default.
 
 
 Version 0.0.0-alpha8
