Fix Bug and Script Encoding
* All: Changed the character encoding of PowerShell scripts from Unicode to UTF-8. Because GitHub is recognizing the files that are encoded by Unicode as binary files.
* All: Added some test to confirm the behavior of Issue #18.
* NuGet: Fixed #20: Indirection stub settings for the instance method of an internal class generates build errors. => Added the judgment condition whether a method signature is public. If the method is an instance method, the type of `this` is also considered additionally.

--- a/Nuspec/Prig.nuspec
+++ b/Nuspec/Prig.nuspec
@@ -23,6 +23,7 @@
 * Fixed #17: Prig can't uninstall correctly against the solution that contains multiple test projects.
 * Fixed #18: `Get-IndirectionStubSetting` generates invalid alias against explict implemented interface.
 * Fixed #19: `Find-IndirectionTarget` should filter the members that can't call indirectly by default.
+* Fixed #20: Indirection stub settings for the instance method of an internal class generates build errors.
 
 
 Version 0.0.0-alpha8
